--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -37,7 +38,7 @@
         <activity android:name=".RankingActivity" />
         <activity android:name=".ReportTrashActivity" />
         <activity android:name=".CleanTrashActivity" />
-        <activity android:name=".SendReportTrashActivity"></activity>
+        <activity android:name=".SendReportTrashActivity"/>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
