--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Geotrashing">
+        <activity android:name=".cleantrashactivities.PrizeTrashActivity"></activity>
+        <activity android:name=".cleantrashactivities.ConfirmTrashActivity" />
+        <activity android:name=".cleantrashactivities.ChooseTrashActivity" />
         <activity android:name=".firestore.TestActivity">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -37,9 +39,9 @@
         <activity android:name=".VerifyTrashActivity" />
         <activity android:name=".RankingActivity" />
         <activity android:name=".ReportTrashActivity" />
-        <activity android:name=".CleanTrashActivity" />
-        <activity android:name=".SendReportTrashActivity"/>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".cleantrashactivities.CleanTrashActivity" />
+        <activity android:name=".SendReportTrashActivity" />
+        <activity android:name=".MainActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
