obraz + tekst ekranu logowania

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Geotrashing"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Geotrashing">
@@ -55,7 +55,7 @@
 
         <activity
             android:name=".LoginActivty"
-            android:label="@string/title_activity_main">
+            android:label="Zaloguj">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
